[gd_scene load_steps=5 format=1]

[ext_resource path="res://Controles.gd" type="Script" id=1]
[ext_resource path="res://top.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://tile.png" type="Texture" id=4]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )
life1_n = NodePath("Control/Life/life1")
life2_n = NodePath("Control/Life/life2")
life3_n = NodePath("Control/Life/life3")

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 768.0

[node name="Viewport" type="Viewport" parent="Control"]

rect = Rect2( 0, 0, 1280, 768 )
own_world = true
world = null
transparent_bg = true
render_target/enabled = false
render_target/v_flip = false
render_target/clear_on_new_frame = true
render_target/filter = false
render_target/gen_mipmaps = false
render_target/update_mode = 1
audio_listener/enable_2d = true
audio_listener/enable_3d = false
physics/object_picking = false
gui/disable_input = false

[node name="Node2D" parent="Control/Viewport" instance=ExtResource( 2 )]

[node name="Life" type="Node2D" parent="Control"]

editor/display_folded = true
transform/pos = Vector2( 64, 64 )

[node name="life1" type="Sprite" parent="Control/Life"]

transform/pos = Vector2( 64, 32 )
texture = ExtResource( 3 )

[node name="life2" type="Sprite" parent="Control/Life"]

transform/pos = Vector2( 160, 32 )
texture = ExtResource( 3 )

[node name="life3" type="Sprite" parent="Control/Life"]

transform/pos = Vector2( 256, 32 )
texture = ExtResource( 3 )

[node name="Buttons" type="Node2D" parent="Control"]

[node name="Bttn_U" type="TouchScreenButton" parent="Control/Buttons"]

visibility/opacity = 0.5
transform/pos = Vector2( 160, 320 )
transform/scale = Vector2( 2, 2 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Bttn_A" type="TouchScreenButton" parent="Control/Buttons"]

visibility/opacity = 0.5
transform/pos = Vector2( 1088, 576 )
transform/scale = Vector2( 2, 2 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Bttn_AS" type="TouchScreenButton" parent="Control/Buttons"]

visibility/opacity = 0.5
transform/pos = Vector2( 1088, 416 )
transform/scale = Vector2( 2, 2 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Bttn_S" type="TouchScreenButton" parent="Control/Buttons"]

visibility/opacity = 0.5
transform/pos = Vector2( 896, 576 )
transform/scale = Vector2( 2, 2 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Bttn_D" type="TouchScreenButton" parent="Control/Buttons"]

visibility/opacity = 0.5
transform/pos = Vector2( 160, 576 )
transform/scale = Vector2( 2, 2 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Bttn_DR" type="TouchScreenButton" parent="Control/Buttons"]

visibility/opacity = 0.5
transform/pos = Vector2( 288, 576 )
transform/scale = Vector2( 0.25, 0.25 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Bttn_DL" type="TouchScreenButton" parent="Control/Buttons"]

visibility/opacity = 0.5
transform/pos = Vector2( 32, 576 )
transform/scale = Vector2( 0.25, 0.25 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Bttn_R" type="TouchScreenButton" parent="Control/Buttons"]

visibility/opacity = 0.5
transform/pos = Vector2( 288, 448 )
transform/scale = Vector2( 2, 2 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Bttn_L" type="TouchScreenButton" parent="Control/Buttons"]

visibility/opacity = 0.5
transform/pos = Vector2( 32, 448 )
transform/scale = Vector2( 2, 2 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[connection signal="pressed" from="Control/Buttons/Bttn_U" to="." method="_on_Bttn_U_pressed"]

[connection signal="released" from="Control/Buttons/Bttn_U" to="." method="_on_Bttn_U_released"]

[connection signal="pressed" from="Control/Buttons/Bttn_A" to="." method="_on_Bttn_A_pressed"]

[connection signal="released" from="Control/Buttons/Bttn_A" to="." method="_on_Bttn_A_released"]

[connection signal="pressed" from="Control/Buttons/Bttn_AS" to="." method="_on_Bttn_AS_pressed"]

[connection signal="released" from="Control/Buttons/Bttn_AS" to="." method="_on_Bttn_AS_released"]

[connection signal="pressed" from="Control/Buttons/Bttn_S" to="." method="_on_Bttn_S_pressed"]

[connection signal="released" from="Control/Buttons/Bttn_S" to="." method="_on_Bttn_S_released"]

[connection signal="pressed" from="Control/Buttons/Bttn_D" to="." method="_on_Bttn_D_pressed"]

[connection signal="released" from="Control/Buttons/Bttn_D" to="." method="_on_Bttn_D_released"]

[connection signal="pressed" from="Control/Buttons/Bttn_DR" to="." method="_on_Bttn_DR_pressed"]

[connection signal="released" from="Control/Buttons/Bttn_DR" to="." method="_on_Bttn_DR_released"]

[connection signal="pressed" from="Control/Buttons/Bttn_DL" to="." method="_on_Bttn_DL_pressed"]

[connection signal="released" from="Control/Buttons/Bttn_DL" to="." method="_on_Bttn_DL_released"]

[connection signal="pressed" from="Control/Buttons/Bttn_R" to="." method="_on_Bttn_R_pressed"]

[connection signal="released" from="Control/Buttons/Bttn_R" to="." method="_on_Bttn_R_released"]

[connection signal="pressed" from="Control/Buttons/Bttn_L" to="." method="_on_Bttn_L_pressed"]

[connection signal="released" from="Control/Buttons/Bttn_L" to="." method="_on_Bttn_L_released"]


